--- a/style-clock.css
+++ b/style-clock.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: linear-gradient(to right, hsl(200, 100%, 50%), hsl(175, 100%, 50%));
+    background: linear-gradient(to right, #c0c0aa, #1cefff);
     display: flex;
     justify-content: center;
     align-items: center;
